--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -26,11 +26,11 @@ jobs:
           docker run --rm -v "${PWD}:/src" returntocorp/semgrep:latest \
             semgrep scan --config=auto --json --output=/src/dashboard/data/semgrep-report.json /src/app || true
 
-      - name: 📊 Upload SAST Artifact
+      - name: 📊 Upload SAST Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sast-report
+          name: semgrep-report
           path: dashboard/data/semgrep-report.json
           retention-days: 14
 
@@ -53,19 +53,19 @@ jobs:
           docker run --rm -v "${PWD}:/src" aquasec/trivy:latest \
             fs --format json --output /src/dashboard/data/trivy-fs-report.json /src || true
 
-      - name: 📊 Upload SCA Repo Artifact
+      - name: 📊 Upload SCA Repo Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sca-repo-report
+          name: trivy-fs-report
           path: dashboard/data/trivy-fs-report.json
           retention-days: 14
 
   # ═══════════════════════════════════════════════════════════════
-  # 3. SCA Container - Container Image Scan
+  # 3. Build Image
   # ═══════════════════════════════════════════════════════════════
-  sca-container:
-    name: "SCA container"
+  build-image:
+    name: "Montar imagen"
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout Code
@@ -74,26 +74,54 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 📁 Create Report Directory
-        run: mkdir -p dashboard/data
-
       - name: 🏗️ Build Docker Image
         run: docker build -t secureshift:scan .
 
-      - name: 🐳 Run Trivy Image Scan
+      - name: 💾 Save Image as Tarball
+        run: |
+          mkdir -p /tmp/docker
+          docker save secureshift:scan -o /tmp/docker/image.tar
+
+      - name: 📤 Upload Image Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image
+          path: /tmp/docker/image.tar
+          retention-days: 1
+
+  # ═══════════════════════════════════════════════════════════════
+  # 4. SCA Container - Container Image Scan
+  # ═══════════════════════════════════════════════════════════════
+  sca-image:
+    name: "SCA imagen"
+    runs-on: ubuntu-latest
+    needs: build-image
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 📁 Create Report Directory
+        run: mkdir -p dashboard/data
+
+      - name: 📥 Download Image Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image
+          path: /tmp/docker
+
+      - name: 🐳 Load Docker Image
+        run: docker load -i /tmp/docker/image.tar
+
+      - name: 🔍 Run Trivy Image Scan
         continue-on-error: true
         run: |
-          if docker images secureshift:scan -q | grep -q .; then
-             docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v "${PWD}:/src" aquasec/trivy:latest \
-               image --format json --output /src/dashboard/data/trivy-image-report.json secureshift:scan || true
-          else
-             echo '{"Results":[]}' > dashboard/data/trivy-image-report.json
-          fi
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v "${PWD}:/src" aquasec/trivy:latest \
+            image --format json --output /src/dashboard/data/trivy-image-report.json secureshift:scan || true
 
-      - name: 📊 Upload SCA Container Artifact
+      - name: 📊 Upload SCA Image Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sca-container-report
+          name: trivy-image-report
           path: dashboard/data/trivy-image-report.json
           retention-days: 14
